# FreezerManager

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CLA.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSING.md  NOTICE  README.md  SECURITY.md  TODO.md  conanfile.py  conanfile.txt  run_qt_client.sh
src/: CMakeLists.txt
src/audit/: AuditChainVerifier.cc  AuditChainVerifier.h  AuditEventContent.cc  AuditEventContent.h  CMakeLists.txt  CanonicalJson.cc  CanonicalJson.h
src/auth/: AuthTypes.h  CMakeLists.txt  IAuthProvider.h  LocalAuthProvider.cc  LocalAuthProvider.h  Totp.cc  Totp.h
src/backup/: BackupCommands.cc  BackupCommands.h  BackupFilename.cc  BackupFilename.h  BackupRunner.cc  BackupRunner.h  CMakeLists.txt  PostgresDump.cc  PostgresDump.h  RetentionPolicy.cc  RetentionPolicy.h  SqliteBackup.cc  SqliteBackup.h
src/cli/: AuditCommands.cc  AuditCommands.h  AuditCsv.cc  AuditCsv.h  BackendFactory.cc  BackendFactory.h  BackupCommands.cc  BackupCommands.h  BoxImport.cc  BoxImport.h  CMakeLists.txt  CliApp.cc  CliApp.h  CreateCommands.cc  CreateCommands.h  CsvImport.h  CsvReader.cc  CsvReader.h  CsvWriter.cc  CsvWriter.h  CustomFieldDefImport.cc  CustomFieldDefImport.h  EntityRead.h  EntityWrite.h  ItemTypeImport.cc  ItemTypeImport.h  KeyCommands.cc  KeyCommands.h  LabCommands.cc  LabCommands.h  NounCommands.cc  NounCommands.h  SampleCommands.cc  SampleCommands.h  SampleCsv.cc  SampleCsv.h  SampleImport.cc  SampleImport.h  SampleQuery.cc  SampleQuery.h  (+7 more)
src/core/: CMakeLists.txt  audit_event.h  box.h  custom_field_validator.h  enums.h  freezer.h  identity.h  ids.h  item_type.h  json_helpers.h  login_attempt.h  permissions.h  quantity.h  role.h  sample.h  session.h  share_request.h  sodium_init.h  timestamp.h  uuid.h
src/crypto/: CMakeLists.txt  FieldCipher.cc  FieldCipher.h  FileCipher.cc  FileCipher.h
src/kms/: CMakeLists.txt  EnvVarKms.cc  EnvVarKms.h  IKmsProvider.h  KeyringKms.cc  KeyringKms.h  KmsFactory.cc  KmsFactory.h  OsKeyringKms.cc  OsKeyringKms.h
src/obs/: CMakeLists.txt  Health.cc  Health.h  Log.cc  Log.h  Metrics.cc  Metrics.h
src/py/: CMakeLists.txt
src/qt/: .clang-format  .clang-tidy  AuthServiceClient.cc  AuthServiceClient.h  BarcodeScanController.cc  BarcodeScanController.h  BarcodeScanWidget.cc  BarcodeScanWidget.h  BoxGridModel.cc  BoxGridModel.h  BoxGridWidget.cc  BoxGridWidget.h  BoxMapPdf.cc  BoxMapPdf.h  BoxServiceClient.cc  BoxServiceClient.h  CMakeLists.txt  ConfigManager.cc  ConfigManager.h  GrpcChannel.cc  GrpcChannel.h  ImportWizardDialog.cc  ImportWizardDialog.h  LabServiceClient.cc  LabServiceClient.h  LabTreeModel.cc  LabTreeModel.h  LabTreeWidget.cc  LabTreeWidget.h  LabelPdf.cc  LabelPdf.h  LabelPrinterBridge.h  LocationPathResolver.cc  LocationPathResolver.h  LoginDialog.cc  LoginDialog.h  MainWindow.cc  MainWindow.h  SampleBrowserWidget.cc  SampleBrowserWidget.h  (+14 more)
src/qt/mock/: MockData.h  MockData_ext.h
src/qt/models/: SampleTableModel.h
src/rest/: CMakeLists.txt  GatewayStubs.h  JsonProtoMapping.cc  JsonProtoMapping.h  RestErrorTranslation.h  RestGateway.cc  RestGateway.h  SseBridge.h
src/rpc/: AuthMiddleware.cc  AuthMiddleware.h  CMakeLists.txt  RateLimiter.h  RpcPolicy.h
src/server/: AuditServiceImpl.cc  AuditServiceImpl.h  AuthServiceImpl.cc  AuthServiceImpl.h  BackupScheduler.cc  BackupScheduler.h  BoxServiceImpl.cc  BoxServiceImpl.h  CMakeLists.txt  FreezerServer.cc  FreezerServer.h  GrpcErrorTranslation.h  ItemTypeServiceImpl.cc  ItemTypeServiceImpl.h  LabServiceImpl.cc  LabServiceImpl.h  MetricsInterceptor.cc  MetricsInterceptor.h  PageToken.cc  PageToken.h  RateLimitInterceptor.cc  RateLimitInterceptor.h  RequestId.h  RestTlsPolicy.h  RoleServiceImpl.cc  RoleServiceImpl.h  SampleServiceImpl.cc  SampleServiceImpl.h  SessionServiceImpl.cc  SessionServiceImpl.h  ShareServiceImpl.cc  ShareServiceImpl.h  UnimplementedStubs.cc  main.cc
src/storage/: AuditTraits.h  BackendFactory.cc  BackendFactory.h  BoxGeometryTraits.h  CMakeLists.txt  CustomFieldResolver.h  EmbeddedMigration.h  FreezerTraits.h  IStorageBackend.h  IdentityTraits.h  ItemTypeTraits.h  LoginAttemptTraits.h  RoleTraits.h  SampleOps.h  SampleTraits.h  SessionTraits.h  ShareRequestTraits.h
src/web/: CMakeLists.txt
tests/backend_conformance/: CMakeLists.txt  postgres_backend_conformance_test.cpp  sqlite_backend_conformance_test.cpp  storage_backend_conformance_test.cpp
tests/e2e/: CMakeLists.txt  e2e_smoke_test.cpp
tests/fuzz/: CMakeLists.txt  fuzz_ratelimit_and_validator.cpp
tests/integration/: CMakeLists.txt  audit_service_integration_test.cpp  box_service_integration_test.cpp  grpc_tls_test.cpp  item_type_service_integration_test.cpp  lab_service_integration_test.cpp  rest_gateway_integration_test.cpp  role_service_integration_test.cpp  sample_service_integration_test.cpp  server_integration_test.cpp  share_service_integration_test.cpp
tests/property/: CMakeLists.txt  audit_chain_property_test.cpp  box_geometry_property_test.cpp  retention_policy_property_test.cpp
tests/unit/: CMakeLists.txt  audit_chain_verifier_test.cpp  audit_event_test.cpp  audit_repository_test.cpp  auth_middleware_test.cpp  auth_types_test.cpp  backup_filename_test.cpp  backup_runner_test.cpp  backup_scheduler_test.cpp  box_geometry_repository_test.cpp  box_repository_test.cpp  box_types_test.cpp  canonical_json_jcs_test.cpp  cli_test.cpp  cli_user_set_password_test.cpp  core_value_types_test.cpp  custom_field_resolver_test.cpp  custom_field_validator_test.cpp  error_translation_test.cpp  field_cipher_test.cpp  file_cipher_test.cpp  freezer_types_test.cpp  identity_repository_test.cpp  identity_types_test.cpp  item_type_repository_test.cpp  item_types_test.cpp  json_helpers_test.cpp  json_proto_mapping_test.cpp  kms_test.cpp  layout_repository_test.cpp  local_auth_provider_test.cpp  migration_files_test.cpp  obs_health_test.cpp  obs_log_test.cpp  obs_metrics_test.cpp  os_keyring_test.cpp  permission_catalog_test.cpp  qt_auth_service_client_test.cpp  qt_barcode_scan_controller_test.cpp  qt_box_grid_model_test.cpp  (+41 more)
(+166 files in other folders)
